fix: set content type on response
